<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Camera</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="set_image">Set picture as</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="share_panorama">Share panorama</string>
    <string name="share_as_photo">Share as photo</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="details">Details</string>
    <string name="close">Close</string>
    <string name="show_on_map">Show on map</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="edit">Edit</string>
    <string name="crop_action">Crop</string>
    <string name="trim_action">Trim</string>
    <string name="set_as">Set as</string>
    <string name="video_err">Can\'t play video.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="path">Path</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="orientation">Orientation</string>
    <string name="duration">Duration</string>
    <string name="mimetype">MIME type</string>
    <string name="file_size">File size</string>
    <string name="maker">Maker</string>
    <string name="model">Model</string>
    <string name="flash">Flash</string>
    <string name="aperture">Aperture</string>
    <string name="focal_length">Focal Length</string>
    <string name="white_balance">White balance</string>
    <string name="exposure_time">Exposure time</string>
    <string name="iso">ISO</string>
    <string name="unit_mm">mm</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="flash_on">Flash fired</string>
    <string name="flash_off">No flash</string>
    <string name="unknown">Unknown</string>
    <string name="try_to_set_local_album_available_offline">
        This item is stored locally and available offline.</string>
    <string name="please_wait">Please wait</string>
    <string name="camera_error_title">Camera error</string>
    <string name="error_cannot_connect_camera">Can\'t connect to the camera.</string>
    <string name="error_camera_disabled">Camera has been disabled because of security policies.</string>
    <string name="error_media_storage_failure">There was a problem saving your photo or video.</string>
    <string name="error_permissions">The app does not have critical permissions needed to run. Please check your permissions settings.</string>
    <string name="reason_storage_failure">Photo storage failure.</string>
    <string name="wait">Please wait\u2026</string>
    <string name="no_storage" product="default">Insert an SD card before using the camera.</string>
    <string name="preparing_sd" product="default">Preparing SD card\u2026</string>
    <string name="access_sd_fail" product="default">Couldn\'t access SD card.</string>
    <string name="time_lapse_title">Time lapse recording</string>
    <string name="feedback_description_camera_access">The app couldn\'t connect to the camera</string>
    <string name="feedback_description_save_photo">Photo or video did not save to the device.</string>
    <string name="capturing">Capturing</string>
    <string name="pref_camera_id_title">Choose camera</string>
    <string name="pref_camera_id_default" translatable="false">0</string>
    <string name="pref_camera_id_index_back" translatable="false">0</string>
    <string name="pref_camera_id_index_front" translatable="false">1</string>
    <string name="pref_camera_id_entry_back">Back</string>
    <string name="pref_camera_id_entry_front">Front</string>
    <string name="pref_camera_id_entry_back_value" translatable="false">0</string>
    <string name="pref_camera_id_entry_front_value" translatable="false">1</string>
    <string name="pref_camera_save_location_title">Save location</string>
    <string name="pref_camera_recordlocation_default" translatable="false">none</string>
    <string name="pref_camera_location_label">LOCATION</string>
    <string name="pref_camera_timer_title">Countdown timer</string>
    <string name="pref_camera_timer_default" translatable="false">0</string>
    <string name="pref_camera_timer_sound_default">@string/setting_on_value</string>
    <string name="pref_camera_timer_sound_title">Beep during countdown</string>
    <string name="setting_off">Off</string>
    <string name="setting_on">On</string>
    <string name="setting_off_value" translatable="false">off</string>
    <string name="setting_on_value" translatable="false">on</string>
    <string name="setting_none_value" translatable="false">none</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_large" translatable="false">large</string>
    <string name="pref_video_quality_medium" translatable="false">medium</string>
    <string name="pref_video_quality_small" translatable="false">small</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse</string>
    <string name="pref_video_time_lapse_frame_interval_default" translatable="false">0</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camcorder settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_picturesize_entry_large">Large</string>
    <string name="pref_camera_picturesize_entry_medium">Medium</string>
    <string name="pref_camera_picturesize_entry_small">Small</string>
    <string name="pref_camera_picturesize_default" translatable="false">large</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_focusmode_entry_auto">Auto</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro">Macro</string>
    <string name="pref_camera_focusmode_label_auto">AUTO</string>
    <string name="pref_camera_focusmode_label_infinity">INFINITY</string>
    <string name="pref_camera_focusmode_label_macro">MACRO</string>
    <string name="pref_camera_hdr_supportmode_none" translatable="false">no_hdr</string>
    <string name="pref_camera_hdr_supportmode_hdr" translatable="false">hdr</string>
    <string name="pref_camera_hdr_supportmode_hdr_plus" translatable="false">hdr_plus</string>
    <string name="pref_camera_focusmode_default" translatable="false">continuous-picture</string>
    <string name="pref_camera_flashmode_default" translatable="false">auto</string>
    <string name="pref_camera_video_flashmode_default" translatable="false">off</string>
    <string name="pref_camera_hdr_plus_flashmode_default" translatable="false">off</string>
    <string name="pref_camera_flashmode_no_flash" translatable="false">no_flash</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_flashmode_label">FLASH MODE</string>
    <string name="pref_camera_flashmode_entry_auto">Auto</string>
    <string name="pref_camera_whitebalance_default" translatable="false">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="mode_camera">Camera</string>
    <string name="mode_video">Video</string>
    <string name="setting_back_camera_photo">Back camera photo</string>
    <string name="setting_back_camera_video">Back camera video</string>
    <string name="setting_front_camera_photo">Front camera photo</string>
    <string name="setting_front_camera_video">Front camera video</string>
    <string name="pref_category_resolution_quality">Resolution &amp; quality</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_camera_exposure_compensation">Manual exposure</string>
    <string name="Camera_advanced_settings">Camera advanced settings</string>
    <string name="Video_advanced_settings">Video advanced settings</string>
    <string name="pref_camera_antibanding_title">Antibanding</string>
    <string name="pref_freeze_frame_display_title">Freeze-frame display</string>
    <string name="pref_camera_jpeg_quality_title">Picture quality</string>
    <string name="pref_camera_jpegh_quality_entry_value_super_hight" translatable="false">super</string>
    <string name="pref_camera_ai_detect_title">AI Detect</string>
    <string name="pref_ai_detect_entry_value_face" translatable="false">face</string>
    <string name="pref_camera_storage_path_title">Storage Path</string>
    <string name="storage_path_external_default" translatable="false">External</string>
    <string name="pref_camera_color_effect_title">Color Effect</string>
    <string name="pref_camera_color_effect_entry_value_none" translatable="false">none</string>
    <string name="pref_video_encode_type_title">Encode type</string>
    <string name="pref_video_encode_type_value_default" translatable="false">h264</string>
    <string name="pref_camera_scenemode_default" translatable="false">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_shutter_sound_title">Shutter Sound</string>
    <string name="pref_camera_continuous_capture_title">Burst</string>
    <string name="pref_camera_burst_entry_defaultvalue" translatable="false">one</string>
    <string name="pref_camera_contrast_title">Contrast</string>
    <string name="pref_contrast_entry_defaultvalue" translatable="false">contrast_three</string>
    <string name="pref_camera_saturation_title">Saturation</string>
    <string name="pref_saturation_entry_defaultvalue" translatable="false">saturation_three</string>
    <string name="pref_entry_value_one" translatable="false">1</string>
    <string name="pref_camera_brightness_titile">Brightness</string>
    <string name="pref_brightness_entry_defaultvalue" translatable="false">brightness_three</string>
    <string name="pref_entry_value_auto" translatable="false">auto</string>
    <string name="pref_camera_iso_title">ISO</string>
    <string name="pref_camera_metering_title">Metering</string>
    <string name="pref_camera_metering_entry_value_center_weighted" translatable="false">centerweighted</string>
    <string name="pref_restore_detail">Restore defaults</string>
    <string name="pref_timelapse_title">Time Lapse</string>
    <string name="pref_timelapse_entry_value_default">0</string>
    <string name="pref_video_slow_motion_title">Slow Motion</string>
    <string name="pref_time_stamp_title">Time stamp</string>
    <string name="pref_zsl_tilte">ZSL</string>
    <string name="pref_mirror_title">Mirror refelection</string>
    <string name="pref_eois_resolution">Debounce</string>
    <string name="pref_eois_back_title">Back camera</string>
    <string name="pref_eois_front_title">Front camera</string>
    <string name="pref_camera_quick_capture_title_volkey">Quick capture by double-click on vol down key</string>
    <string name="pref_camera_quick_capture_entry_value_capture_with_back_camera" translatable="false">2</string>
    <string name="pref_grid_line_title">GridLinePreview</string>
    <string name="pref_high_iso_tilte">High ISO</string>
    <string name="pref_camera_record_voice_title">Audio Note</string>
    <string name="pref_key_volume_function">Volume key function</string>
    <string name="pref_camera_capture_model_one" translatable="false">1</string>
    <string name="pref_key_qrcode_function">QR code</string>
    <string name="rescan_label">rescan</string>
    <string name="access_link_label">Go to link</string>
    <string name="qrcode">Url:</string>
</resources>