<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/qrcode_bitmap_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/qrcode_bitmap"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/qrcode_flash_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="30dp"
            android:text="@string/qrcode"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/result_layout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/qrcode_url_background"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:lines="2"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/qrscan_result_button"
        style="@style/SecurityPreferenceButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/cancel_button"
            style="@style/SecurityPreferenceButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rescan_label" />

        <Button
            android:id="@+id/next_button"
            style="@style/SecurityPreferenceButton"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/access_link_label" />

        <Button
            android:id="@+id/only_cancel_button"
            style="@style/SecurityPreferenceButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rescan_label" />
    </LinearLayout>

</LinearLayout>